-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: 11, 13, 14, 15, 16
-
Component/s: hotspot
-
b14
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8253477 | 11.0.10-oracle | Christian Hagedorn | P3 | Resolved | Fixed | b03 |
| JDK-8255667 | 11.0.10 | Christian Hagedorn | P3 | Resolved | Fixed | b01 |
To reproduce:
$ java -Xmx1G Test.java
#
# A fatal error has been detected by the Java Runtime Environment:
#
# Internal Error (/opt/mach5/mesos/work_dir/slaves/4728e7c1-7e67-490e-be0f-6bbf2a2f33db-S200/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/f2adfb3c-7d1c-4b4c-9f29-56830625211a/runs/4ba05d20-e16e-4238-9561-4084a579e72e/workspace/open/src/hotspot/share/opto/loopnode.cpp:4120), pid=25434, tid=25446
# assert(!had_error) failed: bad dominance
..........
Command Line: -Xmx1G --add-modules=ALL-DEFAULT jdk.compiler/com.sun.tools.javac.launcher.Main Test.java
..........
Current thread (0x00007fa63c2593d0): JavaThread "C2 CompilerThread0" daemon [_thread_in_native, id=25446, stack(0x00007fa603cfd000,0x00007fa603dfe000)]
Current CompileTask:
C2: 1701 1208 % ! 4 Test::mainTest @ 120 (783 bytes)
Stack: [0x00007fa603cfd000,0x00007fa603dfe000], sp=0x00007fa603df8550, free space=1005k
Native frames: (J=compiled Java code, A=aot compiled Java code, j=interpreted, Vv=VM code, C=native code)
V [libjvm.so+0x11972cc] PhaseIdealLoop::compute_lca_of_uses(Node*, Node*, bool)+0x81c
V [libjvm.so+0x1197ae0] PhaseIdealLoop::build_loop_late_post_work(Node*, bool)+0x190
V [libjvm.so+0x119812a] PhaseIdealLoop::build_loop_late(VectorSet&, Node_List&, Node_Stack&)+0xba
V [libjvm.so+0x119ddad] PhaseIdealLoop::build_and_optimize(LoopOptsMode)+0x56d
V [libjvm.so+0x90b0dd] PhaseIdealLoop::verify(PhaseIterGVN&)+0x31d
V [libjvm.so+0x908687] Compile::Optimize()+0x707
V [libjvm.so+0x90a6d0] Compile::Compile(ciEnv*, ciMethod*, int, bool, bool, bool, bool, DirectiveSet*)+0x1500
V [libjvm.so+0x75a694] C2Compiler::compile_method(ciEnv*, ciMethod*, int, bool, DirectiveSet*)+0x184
V [libjvm.so+0x9196d0] CompileBroker::invoke_compiler_on_method(CompileTask*)+0xde0
V [libjvm.so+0x91a498] CompileBroker::compiler_thread_loop()+0x6b8
V [libjvm.so+0x16d4bfc] JavaThread::thread_main_inner()+0x21c
V [libjvm.so+0x16da980] Thread::call_run()+0x100
V [libjvm.so+0x13defb6] thread_native_entry(Thread*)+0x116
- backported by
-
JDK-8253477 C2: assert(!had_error) failed: bad dominance
-
- Resolved
-
-
JDK-8255667 C2: assert(!had_error) failed: bad dominance
-
- Resolved
-
- relates to
-
JDK-8260420 C2 compilation fails with assert(found_sfpt) failed: no node in loop that's not input to safepoint
-
- Resolved
-
-
JDK-8286800 Assert in PhaseIdealLoop::dump_real_LCA is too strong
-
- Resolved
-
-
JDK-8260924 ARM32: TestSplitIfPinnedLoadInStripMinedLoop fails with "missed a node"
-
- Closed
-
-
JDK-8252372 Check if cloning is required to move loads out of loops in PhaseIdealLoop::split_if_with_blocks_post()
-
- Resolved
-